working with i18nextify

--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,35 @@
 <head>
 	<meta charset="UTF-8">
 	<title>test</title>
+	<script language="JavaScript">
+        const initi18Next = (languageFilesUrl) => {
+            i18n
+                .use(Backend)
+                .init({
+                    lng: 'en',
+                    debug: true,
+                    backend: {
+                        loadPath: languageFilesUrl,
+                        ajax: (url, options, callback, data) => {
+                            var xhr = new XMLHttpRequest();
+                            xhr.open("GET", url, false);
+                            xhr.send(data);
+                            callback(xhr.responseText, xhr);
+                        }
+                    }
+                });
+        };
+	</script>
+	<script src="../node_modules/i18nextify/dist/umd/i18nextify.js"></script>
+	<script language="JavaScript">
+        window.i18nextify.init({
+	        backend: {
+		        loadPath: 'http://127.0.0.1:8080/assets/i18n/{{lng}}.json'
+	        }
+        });
+	</script>
 </head>
 <body>
-
+<div id="text-to-translate">my title</div>
 </body>
 </html>
