testing with multiple keys

--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
 	</script>
 </head>
 <body>
-<div id="text-to-translate">my title</div>
+<div id="text-to-translate-1">my title</div>
+<div id="text-to-translate-2">title</div>
 </body>
 </html>
