--- a/public/index.html
+++ b/public/index.html
@@ -6,14 +6,17 @@
 	<script src="../node_modules/i18nextify/dist/umd/i18nextify.js"></script>
 	<script language="JavaScript">
         window.i18nextify.init({
-	        backend: {
-		        loadPath: 'http://127.0.0.1:8080/assets/i18n/{{lng}}.json'
-	        }
+            backend: {
+	            keyAttr: 'i18next-key', //the key overrides
+                loadPath: 'http://127.0.0.1:8080/assets/i18n/{{lng}}.json'
+            }
         });
 	</script>
 </head>
 <body>
 <div id="text-to-translate-1">my title</div>
 <div id="text-to-translate-2">title</div>
+<!-- example of key overriding for same text, solving duplicity problem-->
+<div id="text-to-translate-3" i18next-key="another title">my title</div>
 </body>
 </html>
