adding/discovering options

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,8 @@
         });
 	</script>
 </head>
-<body>
+<!-- to not flicker when loads: -->
+<body style="display: none">
 <div id="text-to-translate-1">my title</div>
 <div id="text-to-translate-2">title</div>
 <!-- example of key overriding for same text, solving duplicity problem-->
