--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>test</title>
-	<script src="../node_modules/i18nextify/dist/umd/i18nextify.js"></script>
+	<script src="./i18nextify.js"></script>
 	<script language="JavaScript">
         window.i18nextify.init({
             backend: {
