commented for language detection

--- a/public/index.html
+++ b/public/index.html
@@ -19,5 +19,11 @@
 <div id="text-to-translate-2">title</div>
 <!-- example of key overriding for same text, solving duplicity problem-->
 <div id="text-to-translate-3" i18next-key="another title">my title</div>
+
+<!--
+	when no lng parameter specified,
+	it detects the language based on: chrome://settings/languages
+   (accept-language header)
+-->
 </body>
 </html>
