added hover and alt

--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,9 @@
 <!-- example of key overriding for same text, solving duplicity problem-->
 <div id="text-to-translate-3" i18next-key="another title">my title</div>
 
+<a href="#" title="Works on title" alt="Works on title">hover me</a>
+
+
 <!--
 	when no lng parameter specified,
 	it detects the language based on: chrome://settings/languages
