added case with name (needs to use <span></span>)

--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,7 @@
 <div id="text-to-translate-3" i18next-key="another title">my title</div>
 
 <a href="#" title="Works on title" alt="Works on title">hover me</a>
+<div id="text-to-translate-with-name">I am <span>Christian</span> and I work in <span>Dexeus</span></div>
 
 
 <!--
