--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>test</title>
+	<script src="./moment.js"></script>
 	<script src="./i18nextify.js"></script>
 	<script language="JavaScript">
         window.i18nextify.init({
@@ -22,6 +23,8 @@
 
 <a href="#" title="Works on title" alt="Works on title">hover me</a>
 <div id="text-to-translate-with-name">I am <span>Christian</span> and I work in <span>Dexeus</span></div>
+<div id="localize-date">I was born in <span i18next-options='{"date": "22/08/2018"}'>{{- date}}</span></div>
+<div id="localize-date-2">I was born in <span i18next-options='{"date": "22/08/2018"}'>nacimiento</span></div>
 
 
 <!--
