correct date localization

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
             },
             interpolation: {
                 /**
-                 * when interpolates goes this way
+                 * when interpolates dates (variable {{date}}) goes this way
                  * @param value
                  * @param format
                  * @param locale
