--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>test</title>
-	<script src="./moment.js"></script>
+	<script src="./moment-with-locales.js"></script>
 	<script src="./i18nextify.js"></script>
 	<script language="JavaScript">
         window.i18nextify.init({
@@ -20,9 +20,10 @@
                  * @returns {*}
                  */
                 format(value, format, locale) {
+                    console.log(arguments)
                     try {
 						var theDate=moment(value)
-						if (theDate.isValid()) return theDate.format(format);
+						if (theDate.isValid()) return theDate.locale(locale).format(format);
 						return value;
                     } catch(e)
                     {
