--- a/public/index.html
+++ b/public/index.html
@@ -47,6 +47,7 @@
 <div id="non-date-interpolation" i18next-options='{"name": "Christian"}'>Hi, {{name}}</span></div>
 <div id="localize-date">I was born in <span i18next-options='{"date": "22/08/2018"}'>{{- date}}</span></div>
 <div id="localize-date-2">I was born in <span i18next-options='{"date": "2018-08-22"}'>nacimiento</span></div>
+<div id="localize-date-3">I was born in <span i18next-options='{"date": "2018-08-22"}'>{{- date, LLLL}}</span></div>
 
 
 <!--
