--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	<!-- no problem either: <meta charset="ISO-8859-1">-->
 	<meta charset="UTF-8">
 	<title>test</title>
 	<script src="./moment-with-locales.js"></script>
