--- a/public/index.html
+++ b/public/index.html
@@ -26,10 +26,8 @@
                     console.log(arguments)
 	                if (!isNaN(value))
 	                {
-	                    //TODO: check if currency!!
-		                console.log("found a number")
 		                numeral.locale(locale)
-	                    return numeral(value).format('0,0.00')
+	                    return numeral(value).format(format)
 	                }
                     try {
 						var theDate=moment(value)
@@ -58,7 +56,7 @@
 <div id="localize-date">I was born in <span i18next-options='{"date": "22/08/2018"}'>{{- date}}</span></div>
 <div id="localize-date-2">I was born in <span i18next-options='{"date": "2018-08-22"}'>nacimiento</span></div>
 <div id="localize-date-3">I was born in <span i18next-options='{"date": "2018-08-22"}'>{{- date, LLLL}}</span></div>
-<div id="localize-currency" i18next-options='{"number": "3000.23"}'>{{number,}}</span></div>
+<div id="localize-currency" i18next-options='{"number": "3000.23"}'>{{number,'0,0.00'}}</span></div>
 
 
 <!--
