compatibility with IE

--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,7 @@
                  * @param locale
                  * @returns {*}
                  */
-                format(value, format, locale) {
+                format: function(value, format, locale) {
                     console.log(arguments);
 	                if (!isNaN(value))
 	                {
